remove deprecated usage of .newInstance()